--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
                 <li class="item"><a href="reservation.html">Reservations</a></li>
-                <li class="item desktop"><a href="presentations.html">Presentations</a></li>
+                <li class="item desktop"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
