--- a/emploi.html
+++ b/emploi.html
@@ -28,7 +28,7 @@
             <ul class="nav-burger-item">
                 <li class="item"><a href="galerie.html">Galerie</a></li>
                 <li class="item"><a href="event.html">Evenements</a></li>
-                <li class="item mobile"><a href="presentations.html">Presentations</a></li>
+                <li class="item mobile"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="avis.html">Livre d'or</a></li>
                 <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
