--- a/event.html
+++ b/event.html
@@ -16,8 +16,8 @@
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
-                <li class="item"><a href="reservations.html">Reservations</a></li>
-                <li class="item"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
