remplace acceuil with accueil

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         </nav>
     </header>
 
-    <section class="acceuil-container">
-        <img src="ressources/acceuilBg.jpg" alt="Background picture">
-        <div class="acceuil-title-container">
+    <section class="accueil-container">
+        <img src="ressources/accueilBg.jpg" alt="Background picture">
+        <div class="accueil-title-container">
             <h1 class="main-title">L'Odyssey</h1>
             <h2 class="sub-title">Retrouver les saveurs geeks</h2>
         </div>
-        <div class="acceuil-link-container">
-            <div class="acceuil-link acceuil-menu-img">
+        <div class="accueil-link-container">
+            <div class="accueil-link accueil-menu-img">
                 <button><a href="#">Menu</a></button>
             </div>
-            <div class="acceuil-link acceuil-present-img">
+            <div class="accueil-link accueil-present-img">
                 <button><a href="presentation.html">Presentation</a></button>
             </div>
-            <div class="acceuil-link acceuil-order-img">
+            <div class="accueil-link accueil-order-img">
                 <button><a href="reservation.html">Reservation</a></button>
             </div>
         </div>
