--- a/presentation.html
+++ b/presentation.html
@@ -89,7 +89,7 @@
 
     <div class="space"></div>
 
-    <footer class="footer-style">
+    <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
 
