--- a/reservation.html
+++ b/reservation.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
-                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item"><a href="reservation.html">Reservation</a></li>
                 <li class="item desktop"><a href="presentations.html">Presentations</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
@@ -107,6 +107,7 @@
             <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
         </footer>
 
+    <script src="scripts/script.js"></script>
     <script src="scripts/reservation.js"></script>
 </body>
 </html>
