--- a/presentation.html
+++ b/presentation.html
@@ -93,6 +93,8 @@
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
 
+    <div class="space"></div>
+
 
     <script src="scripts/script.js"></script>
 </body>
