modif link menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="accueil-link-container">
             <div class="accueil-link accueil-menu-img">
-                <button><a href="#">Menu</a></button>
+                <button><a href="menu.html">Menu</a></button>
             </div>
             <div class="accueil-link accueil-present-img">
                 <button><a href="presentation.html">Presentation</a></button>
