--- a/emploi.html
+++ b/emploi.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
