--- a/event.html
+++ b/event.html
@@ -63,7 +63,7 @@
         </section>
 
     
-<footer>
+<footer class="footer-event">
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
     <script src="scripts/script.js"></script>
