adding the event link

--- a/reservation.html
+++ b/reservation.html
@@ -97,7 +97,7 @@
             <div id="reservation-events-container">
                 <h3>Nous proposons également des événements</h3>
                 <p>Mariages, Anniversaires, Séminaires, ...</p>
-                <button class="reservation-button">Découvrir nos événements</button>
+                <a href="event.html"><button class="reservation-button">Découvrir nos événements</button></a>
                 <h4>Contactez nous par téléphone pour plus d'informations sur la réservation</h4>
                 <a href="tel:03.13.26.33.49" class="phone-number"><span class="phone-icon">&#9743;</span> 03.13.26.33.49</a>
 
