add anim btn img acceuil + fix bug js X burger

--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
         </div>
         <div class="accueil-link-container">
             <div class="accueil-link accueil-menu-img">
-                <button><a href="menu.html">Menu</a></button>
+                <div class="link-box">
+                    <button><a href="menu.html">Menu</a></button>
+                </div>
             </div>
             <div class="accueil-link accueil-present-img">
-                <button><a href="presentation.html">Presentation</a></button>
+                <div class="link-box">
+                    <button><a href="presentation.html">Presentation</a></button>
+                </div>
             </div>
             <div class="accueil-link accueil-order-img">
-                <button><a href="reservation.html">Reservation</a></button>
+                <div class="link-box">
+                    <button><a href="reservation.html">Reservation</a></button>
+                </div>
             </div>
         </div>
     </section>
