changing the desktop style, adding a class for the name div, creating the mean rating div

--- a/avis.html
+++ b/avis.html
@@ -42,6 +42,10 @@
         <!-- Title -->
         <h1>Avis clients</h1>
 
+        <div class="opinions-rated">
+            
+        </div>
+
         <!-- Container of all clients opinions -->
         <div class="opinions-container">
 
