adding the confirmation div, remmoving the h2, adding the confirmation div style

--- a/reservation.html
+++ b/reservation.html
@@ -42,7 +42,10 @@
         <!-- Title -->
         <h1>Réservation</h1>
 
-        <h2>Détails</h2>
+        <!-- Confirmation container -->
+        <div id="confirmation-container">
+            
+        </div>
 
         <!-- Pickup reservation Container -->
         <div id="reservation-global-container">
