add anim alert submit form contact

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
             loading="lazy"></iframe>
         </section>
 
-        <section class="form-container">
+        <form class="form-container">
             <div class="form-items">
                 <label for="name">Nom :</label>
                 <input type="text" name="name" id="name" placeholder="Votre Nom.." required>
@@ -97,12 +97,13 @@
                 <textarea name="message" id="message" cols="40" rows="7" placeholder="Ecrivez votre message ici.." required></textarea>
             </div>
             <input class="form-items form-submit" type="submit" value="Envoyer">
-        </section>
+        </form>
 
     </section>
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="scripts/contact.js"></script>
 </body>
 </html>
