confirmation div working, styling and effet working. The date validation is not working

--- a/reservation.html
+++ b/reservation.html
@@ -43,9 +43,7 @@
         <h1>Réservation</h1>
 
         <!-- Confirmation container -->
-        <div id="confirmation-container">
-            
-        </div>
+        <div class="confirmation-container"></div>
 
         <!-- Pickup reservation Container -->
         <div id="reservation-global-container">
