--- a/presentation.html
+++ b/presentation.html
@@ -37,15 +37,15 @@
     
     <h1 id="title-main">Qui sommes nous</h1>
 
+
     <div class="image-about"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
     <div class="space"></div>
 
-    <h2 class="small-titles">Notre cuisine</h2>
+        <h2 class="small-titles">Notre cuisine</h2>
 
-<section class="article">
-    
-    <p>
+
+                <p class="parag">
     L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
     On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.<br>
     Embarquez sur l'Odyssée pour une exploration au pays de l'exotisme et de la gourmandise.<br>
@@ -57,10 +57,12 @@
     </p>
 
 
-    <h3 class="small-titles">Notre Equipe</h3>
 
 
-    <p >
+        <h3 class="small-titles">Notre Equipe</h3>
+
+
+                <p class="parag">
     Notre équipe est composée de la crême de la crême!
     Les serveurs front-end seront aux petits-soins pour vous satisfaire tout au long de votre aventure.
     Grâce à leur expertise, vous disposerez des meilleurs conseils pour accorder nos mets et nos vins prestigieux.
@@ -70,8 +72,9 @@
     Leur base de données de compétences est impressionnante!<br>
     </p>
 
-    <h4 class="small-titles">Notre offre</h4>
+        <h4 class="small-titles">Notre offre</h4>
 
+                <p class="parag">
     Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
     vous pouvez réserver une table dans notre restaurant grâce à l'onglet de réservation situé dans la barre de navigation.<br>
     N'hesitez pas à nous contacter pour toute information ou requête spéciale, nous disposons de salons privés réservables pour vos séminaires, mariages, réunions...
@@ -81,7 +84,6 @@
     abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
-</section>
 
     <div class="space"></div>
 
