date validation works, date formated, confirmation div works

--- a/reservation.html
+++ b/reservation.html
@@ -76,7 +76,7 @@
 
                 <div class="reservation-input-element">
                     <label for="reservation-number">Nombre : </label>
-                    <input type="number" id="reservation-number" min="1" max="10" />
+                    <input type="number" id="reservation-number" min="1" max="10" value="1"/>
                 </div>
 
                 <button id="submit" class="reservation-input-element reservation-button"><span class="hand-icon">&#9758;</span> Réserver</button>
