--- a/presentation.html
+++ b/presentation.html
@@ -37,7 +37,6 @@
     
     <h1 id="title-main">Qui sommes nous</h1>
 
-
     <div class="image-about"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
     <div class="space"></div>
@@ -57,7 +56,11 @@
     </p>
 
 
+    <div class="space"></div>
 
+    <div class="image-about"><img src="ressources/platter.jpg" alt="plateau resto"></div>
+
+    <div class="space"></div>
 
         <h3 class="small-titles">Notre Equipe</h3>
 
@@ -71,6 +74,12 @@
     Leur objectif est de vous régaler mais aussi de vous faire découvrir de nouvelles saveurs.<br>
     Leur base de données de compétences est impressionnante!<br>
     </p>
+
+    <div class="space"></div>
+
+<div class="image-about"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div>
+
+    <div class="space"></div>
 
         <h4 class="small-titles">Notre offre</h4>
 
