--- a/emploi.html
+++ b/emploi.html
@@ -60,7 +60,6 @@
 <h3>Nos offres</h3>
 <div class="flexbox2">
     <div class="offres" id="nos-offres">
-    
         <select>
         <option value="votre-domaine">Votre domaine</option>
         <option value="front-end-salle">Front-end: Service en salle</option>
@@ -75,14 +74,32 @@
         <p><i class="fi-xtluxl-envelope-text-thin"></i>Postulez pour de futures opportunités !</p>
     </div>
     <div class="offres" id="btn">
-        <button id="postule-btn">Je postule</button>
+        <button class="modal-btn">Je postule</button>
     </div>
-    
+</div>
+<div class="modal-bg">
+    <div class="modal">
+        <h4>Come aboard !</h4>
+        <label for="nom">Nom :</label>
+        <input type=text id="nom">
+        <label for="prenom">Prénom :</label>
+        <input type=text id="prenom">
+        <label for="email">E-mail :</label>
+        <input type=text id="email">
+        <label for="domaine">A quelle offre répondez-vous :</label>
+        <input type=text id="domaine">
+        <label for="dispo">A quelle date êtes-vous disponible :</label>
+        <input type=text id="dispo">
+        <label for="cv">Soumettre votre cv :</label>
+        <input type=text id="cv">
+        <button class="send-btn">Envoyer</button>
+        <span class="modal-close">X</span>
+    </div>
 </div>
 <footer>
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
-
+<script src="scripts/emploi.js"></script>
 <script src="scripts/script.js"></script>
 </body>
 </html>
