--- a/presentation.html
+++ b/presentation.html
@@ -34,8 +34,11 @@
         </nav>
     </header>
 
+    <div class="space"></div>
     
     <h1 id="title-main">Qui sommes nous</h1>
+
+    <div class="space"></div>
 
     <div class="image-about"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
