fixing the reservation style

--- a/reservation.html
+++ b/reservation.html
@@ -43,7 +43,7 @@
         <h1>Réservation</h1>
 
         <!-- Confirmation container -->
-        <div class="confirmation-container"></div>
+        <div id="confirmation-container" class="confirmation-container"></div>
 
         <!-- Pickup reservation Container -->
         <div id="reservation-global-container">
