--- a/presentation.html
+++ b/presentation.html
@@ -33,19 +33,18 @@
             </ul>
         </nav>
     </header>
-
-    <div class="space"></div>
     
     <h1 id="title-main">Qui sommes nous</h1>
 
     <div class="space"></div>
 
-    <div class="image-about"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
+        <h2 class="small-titles">Notre Restaurant</h2>
 
     <div class="space"></div>
 
-        <h2 class="small-titles">Notre cuisine</h2>
+<div class="image-text-container">
 
+        <div class="image-text">
 
                 <p class="parag">
     L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
@@ -58,15 +57,18 @@
     Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
     </p>
 
+    <div id="image-resto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
+
+</div>
+</div>
+    
+    <div class="space"></div>
+
+    <h3 class="small-titles">Notre Equipe</h3>
 
     <div class="space"></div>
 
-    <div class="image-about"><img src="ressources/platter.jpg" alt="plateau resto"></div>
-
-    <div class="space"></div>
-
-        <h3 class="small-titles">Notre Equipe</h3>
-
+    <div class="image-text">
 
                 <p class="parag">
     Notre équipe est composée de la crême de la crême!
@@ -78,13 +80,17 @@
     Leur base de données de compétences est impressionnante!<br>
     </p>
 
-    <div class="space"></div>
+    <div id="image-platter"><img src="ressources/platter.jpg" alt="plateau resto"></div>
 
-<div class="image-about"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div>
+</div>
 
     <div class="space"></div>
 
         <h4 class="small-titles">Notre offre</h4>
+
+        <div class="space"></div>
+
+        <div class="image-text">
 
                 <p class="parag">
     Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
@@ -96,19 +102,17 @@
     abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
+    <div id="image-kitchen"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div>
 
-    <div class="space"></div>
+</div>
 
-    <div class="image-about"><img src="ressources/burgerwild.jpg" alt="photo de burger"></div>
-
-    <div class="space"></div>
+     <div class="space"></div>
 
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
 
     <div class="space"></div>
-
 
     <script src="scripts/script.js"></script>
 </body>
