--- a/presentation.html
+++ b/presentation.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -42,8 +43,6 @@
 
     <div class="space"></div>
 
-<div class="image-text-container">
-
         <div class="image-text">
 
                 <p class="parag">
@@ -57,9 +56,8 @@
     Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
     </p>
 
-    <div id="image-resto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
+    <div class="image-resto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
-</div>
 </div>
     
     <div class="space"></div>
@@ -80,7 +78,7 @@
     Leur base de données de compétences est impressionnante!<br>
     </p>
 
-    <div id="image-platter"><img src="ressources/platter.jpg" alt="plateau resto"></div>
+    <div class="image-resto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
 
 </div>
 
@@ -102,7 +100,7 @@
     abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
-    <div id="image-kitchen"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div>
+    <div class="image-resto"><img src="ressources/platter.jpg" alt="plateau resto"></div>
 
 </div>
 
