--- a/presentation.html
+++ b/presentation.html
@@ -70,12 +70,14 @@
 
                 <p class="parag">
     Notre équipe est composée de la crême de la crême!
-    Les serveurs front-end seront aux petits-soins pour vous satisfaire tout au long de votre aventure.
-    Grâce à leur expertise, vous disposerez des meilleurs conseils pour accorder nos mets et nos vins prestigieux.
-    leur priorité est votre confort.
+    Les serveurs front-end seront aux petits-soins pour vous satisfaire tout au long de votre aventure.<br>
+    Grâce à leur expertise, vous disposerez des meilleurs conseils pour accorder nos mets et nos vins prestigieux.<br>
+    leur priorité est votre confort.<br>
     Les cuisiniers back-end, quant à eux, mettront tous leurs savoirs-faire à votre disposition pour vous servir les plats les plus délicieux.
     Leur objectif est de vous régaler mais aussi de vous faire découvrir de nouvelles saveurs.<br>
     Leur base de données de compétences est impressionnante!<br>
+    Tous les membres de notre équipe viennent d'horizons très différentes, ce qui apporte une richesse de cultures et de savoir savoirs-faire non négligeable dans un collectif.<br>
+    Le maître mot est le travail d'équipe.
     </p>
 
     <div class="image-resto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
