changing divs into sections

--- a/avis.html
+++ b/avis.html
@@ -42,17 +42,17 @@
         <!-- Title -->
         <h1>Avis clients</h1>
 
-        <div class="opinions-rated">
+        <section class="opinions-rated">
             
-        </div>
+        </section>
 
         <!-- Container of all clients opinions -->
-        <div class="opinions-container">
+        <section class="opinions-container">
 
-        </div>
+        </section>
 
         <!-- Container with the form -->
-        <div class="add-opinion-container">
+        <section class="add-opinion-container">
             <!--<fieldset>-->
                 <form id="add-opinion-form">
                     <input type="text" id="name" class="submit-element" placeholder="Votre nom" />
@@ -69,7 +69,7 @@
                     <button id="submit" class="submit-element">Envoyer</button>
                 </form>
             <!-- </fieldset> -->
-        </div>
+            </section>
 
     </div>
 
