--- a/reservation.html
+++ b/reservation.html
@@ -43,10 +43,10 @@
         <h1>Réservation</h1>
 
         <!-- Confirmation container -->
-        <div id="confirmation-container" class="confirmation-container"></div>
+        <section id="confirmation-container" class="confirmation-container"></section>
 
         <!-- Pickup reservation Container -->
-        <div id="reservation-global-container">
+        <section id="reservation-global-container">
             <!-- Subtitle -->
             <h3>Sélectionner une date pour la réservation</h3>
 
@@ -82,10 +82,10 @@
                 <button id="submit" class="reservation-input-element reservation-button"><span class="hand-icon">&#9758;</span> Réserver</button>
             </div>
 
-        </div>
+        </section>
 
         <!-- Global phone reservation -->
-        <div id="phone-global-reservation">
+        <section id="phone-global-reservation">
 
             <!-- Phone reservation -->
             <div id="reservation-phone-container">
@@ -103,7 +103,7 @@
                 <a href="tel:03.13.26.33.49" class="phone-number"><span class="phone-icon">&#9743;</span> 03.13.26.33.49</a>
 
             </div>
-        </div>
+        </section>
         <footer>
             <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
         </footer>
