fixed syntax html

--- a/presentation.html
+++ b/presentation.html
@@ -43,7 +43,7 @@
 
     <div class="space"></div>
 
-        <div class="image-text">
+    <div class="image-text">
 
                 <p class="parag">
     L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
@@ -56,9 +56,9 @@
     Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
     </p>
 
-    <div class="image-resto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
+    <div class="imageResto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
-</div>
+    </div>
     
     <div class="space"></div>
 
@@ -80,17 +80,17 @@
     Le maître mot est le travail d'équipe.
     </p>
 
-    <div class="image-resto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
+    <div class="imageResto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
 
-</div>
+    </div>
 
     <div class="space"></div>
 
         <h4 class="small-titles">Notre offre</h4>
 
-        <div class="space"></div>
+    <div class="space"></div>
 
-        <div class="image-text">
+    <div class="image-text">
 
                 <p class="parag">
     Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
@@ -102,9 +102,9 @@
     abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
-    <div class="image-resto"><img src="ressources/platter.jpg" alt="plateau resto"></div>
+    <div class="imageResto"><img src="ressources/platter.jpg" alt="plateau resto"></div>
 
-</div>
+    </div>
 
      <div class="space"></div>
 
