--- a/event.html
+++ b/event.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/event.css">
     <title>l'Odyssey</title>
 </head>
 <body>
@@ -63,9 +64,9 @@
         </section>
 
     
-<footer class="footer-event">
+<footer>
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/event.js"></script>
 </body>
 </html>
