--- a/presentation.html
+++ b/presentation.html
@@ -35,16 +35,15 @@
         </nav>
     </header>
     
-    <h1 id="title-main">Qui sommes nous</h1>
+        <h1 id="title-main">Qui sommes nous</h1>
 
-    <div class="space"></div>
+            <div class="space"></div>
 
         <h2 class="small-titles">Notre Restaurant</h2>
 
-    <div class="space"></div>
+            <div class="space"></div>
 
-    <div class="image-text">
-
+        <div class="image-texte-container">
                 <p class="parag">
     L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
     On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.<br>
@@ -54,20 +53,17 @@
     Pas de panique, les vegans ne sont pas oubliés grâce à nos délicieux plats 100% garantis sans aucune particule animale.<br>
     Nos légumes proviennent de producteurs locaux s'appliquant corps et âmes à fournir la meilleure qualité possible.
     Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
-    </p>
-
-    <div class="imageResto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
-
-    </div>
+                </p>
+            <div class="imageResto"><img src="ressources/restaurantwild.png" alt="photo de l'doyssey"></div>
+        </div>
     
-    <div class="space"></div>
+            <div class="space"></div>
 
-    <h3 class="small-titles">Notre Equipe</h3>
+        <h3 class="small-titles">Notre Equipe</h3>
 
-    <div class="space"></div>
+            <div class="space"></div>
 
-    <div class="image-text">
-
+        <div class="image-texte-container">
                 <p class="parag">
     Notre équipe est composée de la crême de la crême!
     Les serveurs front-end seront aux petits-soins pour vous satisfaire tout au long de votre aventure.<br>
@@ -78,20 +74,17 @@
     Leur base de données de compétences est impressionnante!<br>
     Tous les membres de notre équipe viennent d'horizons très différentes, ce qui apporte une richesse de cultures et de savoir savoirs-faire non négligeable dans un collectif.<br>
     Le maître mot est le travail d'équipe.
-    </p>
+                </p>
+            <div class="imageResto"><img src="ressources/kitchen.png" alt="cuisine de l'odyssey"></div> 
+        </div>
 
-    <div class="imageResto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
-
-    </div>
-
-    <div class="space"></div>
+            <div class="space"></div>
 
         <h4 class="small-titles">Notre offre</h4>
 
-    <div class="space"></div>
+            <div class="space"></div>
 
-    <div class="image-text">
-
+        <div class="image-texte-container">
                 <p class="parag">
     Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
     vous pouvez réserver une table dans notre restaurant grâce à l'onglet de réservation situé dans la barre de navigation.<br>
@@ -100,20 +93,18 @@
     Un onglet Evenements est disponible dans la barre de navigation afin de consulter nos manifestations passées et futures.<br>
     Notre équipe reste à votre entière disposition.
     abonnez-vous à notre Newsletter pour rester informé.
-    </p>
+                </p>
+            <div class="imageResto"><img src="ressources/platter.png" alt="plateau resto"></div>
+        </div>
 
-    <div class="imageResto"><img src="ressources/platter.jpg" alt="plateau resto"></div>
+            <div class="space"></div>
 
-    </div>
+<footer>
+    <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
+</footer>
 
-     <div class="space"></div>
+            <div class="space"></div>
 
-    <footer>
-        <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
-    </footer>
-
-    <div class="space"></div>
-
-    <script src="scripts/script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
