--- a/presentation.html
+++ b/presentation.html
@@ -54,7 +54,7 @@
     Nos légumes proviennent de producteurs locaux s'appliquant corps et âmes à fournir la meilleure qualité possible.
     Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
                 </p>
-            <div class="imageResto"><img src="ressources/restaurantwild.png" alt="photo de l'doyssey"></div>
+            <div class="imageResto"><img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
         </div>
     
             <div class="space"></div>
@@ -75,7 +75,7 @@
     Tous les membres de notre équipe viennent d'horizons très différentes, ce qui apporte une richesse de cultures et de savoir savoirs-faire non négligeable dans un collectif.<br>
     Le maître mot est le travail d'équipe.
                 </p>
-            <div class="imageResto"><img src="ressources/kitchen.png" alt="cuisine de l'odyssey"></div> 
+            <div class="imageResto"><img src="ressources/kitchen.jpg" alt="cuisine de l'odyssey"></div> 
         </div>
 
             <div class="space"></div>
@@ -94,7 +94,7 @@
     Notre équipe reste à votre entière disposition.
     abonnez-vous à notre Newsletter pour rester informé.
                 </p>
-            <div class="imageResto"><img src="ressources/platter.png" alt="plateau resto"></div>
+            <div class="imageResto"><img src="ressources/platter.jpg" alt="plateau resto"></div>
         </div>
 
             <div class="space"></div>
