add typeWritter acceuil, color active page, anim contact

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
             <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
             <nav class="navbar">
                 <ul class="nav-items-container">
-                    <li class="item"><a href="menu.html">Menu</a></li>
+                    <li class="item"><a class="nav-active-color" href="menu.html">Menu</a></li>
                     <li class="item"><a href="reservation.html">Reservations</a></li>
                     <li class="item desktop"><a href="presentation.html">Presentation</a></li>
                     <li class="item"><a href="contact.html">Contact</a></li>
