--- a/avis.html
+++ b/avis.html
@@ -29,7 +29,7 @@
                 <li class="item"><a href="galerie.html">Galerie</a></li>
                 <li class="item"><a href="event.html">Evenements</a></li>
                 <li class="item mobile"><a href="presentation.html">Presentation</a></li>
-                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a class="nav-active-color" href="avis.html">Livre d'or</a></li>
                 <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
