--- a/galerie.html
+++ b/galerie.html
@@ -26,7 +26,7 @@
                 <div class="burger-line3"></div>
             </div>
             <ul class="nav-burger-item">
-                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a class="nav-active-color" href="galerie.html">Galerie</a></li>
                 <li class="item"><a href="event.html">Evenements</a></li>
                 <li class="item mobile"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="avis.html">Livre d'or</a></li>
