--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
+        <div class="logo"><a href="index.html"><img class="nav-active-color" src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
@@ -62,6 +62,9 @@
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
+    
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="scripts/accueil.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
