read more section

--- a/emploi.html
+++ b/emploi.html
@@ -36,14 +36,13 @@
     </header>
 
 <!-- Titre page emploi-->
-
 <h2>Faites partie de l'équipe !</h2>
     
 <!-- Présentation des valeurs de l'équipe-->
-
 <div class="flexbox1">
     <div class="valeurs">
-        <img src="ressources/emploi1.jpg">
+        <img src="ressources/emploi1.jpg" class="table-img">
+        <div class="read-more">Read More</div>
     </div>
     <div class="valeurs">
         <h3>Nos valeurs</h3>
@@ -52,7 +51,8 @@
             Que votre domaine de compétence se tourne plutôt vers le front-end ou le back-end, nous mettons avant tout l'accent sur le côté humain de nos équipes, et sommes à la recherche de membres qui offreront la meilleure expérience possible à nos clients.</p>
     </div>
     <div class="valeurs">
-        <img src="ressources/emploi2.jpg">
+        <img src="ressources/emploi2.jpg" class="table-img">
+        <div class="read-more"><a href="presentation.html">Read More</a></div>
     </div>
 </div>
 
@@ -77,6 +77,8 @@
         <button class="modal-btn">Je postule</button>
     </div>
 </div>
+
+<!--Fenêtre pour candidater-->
 <div class="modal-bg">
     <div class="modal">
         <h4>Come aboard !</h4>
@@ -96,6 +98,7 @@
         <span class="modal-close">X</span>
     </div>
 </div>
+<!--Footer-->
 <footer>
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
