added js animation

--- a/presentation.html
+++ b/presentation.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
     
-        <h1 id="title-main">Qui sommes nous</h1>
+        <h1 class="title-main">Qui sommes nous</h1>
 
             <div class="space"></div>
 
@@ -105,6 +105,8 @@
 
             <div class="space"></div>
 
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <script src="scripts/script.js"></script>
+<script src="scripts/presentation.js"></script>
 </body>
 </html>
