--- a/presentation.html
+++ b/presentation.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
     
-        <h1 class="title-main">Qui sommes nous</h1>
+        <h1 class="title-main">L'Odyssey, Qui sommes nous</h1>
 
             <div class="space"></div>
 
@@ -45,9 +45,9 @@
 
         <div class="image-texte-container">
                 <p class="parag">
-    L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
+    L'Odyssey Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
     On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.<br>
-    Embarquez sur l'Odyssée pour une exploration au pays de l'exotisme et de la gourmandise.<br>
+    Embarquez sur l'Odyssey pour une exploration au pays de l'exotisme et de la gourmandise.<br>
     Tous nos produits sont frais, nous nous engageons à vous servir seulement les meilleurs.
     Nos viandes viennent des meilleurs producteurs, que ce soit pour la volaille de bresse label rouge ou nos boeufs de race charolaise et limousines.<br>
     Pas de panique, les vegans ne sont pas oubliés grâce à nos délicieux plats 100% garantis sans aucune particule animale.<br>
