Img compress & modif speed anim typewritter

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <section class="accueil-container">
-        <img src="ressources/accueilBg.jpg" alt="Background picture">
+        <img src="ressources/accueilBg.jpeg" alt="Background picture">
         <div class="accueil-title-container">
             <h1 class="main-title">L'Odyssey</h1>
             <h2 class="sub-title">Retrouver les saveurs geeks</h2>
