--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <section class="main">
         <h1 id="main-title" >Contactez Nous</h1>
-        <img id="contact-img" src="ressources/contact2.jpg" alt="Background picture phone">
+        <img id="contact-img" src="ressources/contact2.jpeg" alt="Background picture phone">
     </section>
 
     <section class="container">
