compressed pics and modif js

--- a/emploi.html
+++ b/emploi.html
@@ -41,8 +41,8 @@
 <!-- Présentation des valeurs de l'équipe-->
 <div class="flexbox1">
     <div class="valeurs">
-        <img src="ressources/emploi1.jpg" class="table-img">
-        <div class="read-more">Read More</div>
+        <img src="ressources/emploi1.jpeg" class="table-img">
+        <div class="read-more"><a href="presentation.html">Read More</a></div>
     </div>
     <div class="valeurs">
         <h3>Nos valeurs</h3>
@@ -51,8 +51,8 @@
             Que votre domaine de compétence se tourne plutôt vers le front-end ou le back-end, nous mettons avant tout l'accent sur le côté humain de nos équipes, et sommes à la recherche de membres qui offreront la meilleure expérience possible à nos clients.</p>
     </div>
     <div class="valeurs">
-        <img src="ressources/emploi2.jpg" class="table-img">
-        <div class="read-more"><a href="presentation.html">Read More</a></div>
+        <img src="ressources/emploi2.jpeg" class="table-img">
+        <div class="read-more">Read more</div>
     </div>
 </div>
 
