--- a/presentation.html
+++ b/presentation.html
@@ -48,11 +48,12 @@
     L'Odyssey Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
     On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.<br>
     Embarquez sur l'Odyssey pour une exploration au pays de l'exotisme et de la gourmandise.<br>
-    Tous nos produits sont frais, nous nous engageons à vous servir seulement les meilleurs.
+    Vous trouverez un établissement à l'ambiance industrielle moderne dans la plus pure tradition New-Yorkaise.<br>   Tous nos produits sont frais, nous nous engageons à vous servir seulement les meilleurs.
     Nos viandes viennent des meilleurs producteurs, que ce soit pour la volaille de bresse label rouge ou nos boeufs de race charolaise et limousines.<br>
     Pas de panique, les vegans ne sont pas oubliés grâce à nos délicieux plats 100% garantis sans aucune particule animale.<br>
     Nos légumes proviennent de producteurs locaux s'appliquant corps et âmes à fournir la meilleure qualité possible.
-    Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
+    Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.<br>
+
                 </p>
             <img src="ressources/restaurantwild.jpg" alt="photo de l'doyssey">
         </div>
