add modal submit form contact

--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,13 @@
             </div>
         </form>
 
+        <div class="modal-bg">
+            <div class="modal">
+                <h2 class="modal-title"></h2>
+                <button class="modal-btn">Fermer</button>
+            </div>
+        </div>
+
     </section>
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
