--- a/presentation.html
+++ b/presentation.html
@@ -35,7 +35,9 @@
         </nav>
     </header>
     
-        <h1 class="title-main">L'Odyssey, Qui sommes nous?</h1>
+            <div class="space"></div>
+    
+    <h1 class="title-main">L'Odyssey, Qui sommes nous?</h1>
 
             <div class="space"></div>
 
