--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
     <section class="main">
         <h1 id="main-title" >Contactez Nous</h1>
         <img id="contact-img" src="ressources/contact2.jpeg" alt="Background picture phone">
+        <img id="contact-racoon" src="ressources/shyRaccoon.png" alt="Racoon">
     </section>
 
     <section class="container">
