modify galerie html et css

--- a/galerie.html
+++ b/galerie.html
@@ -42,9 +42,9 @@
             </div>
             <div id="nav-gallery">
                 <ul>
-                    <li><a href="#section-classic">Classique</a></li>
-                    <li><a href="#section-spicy">épicé</a></li>
-                    <li><a href="#section-vegan">vegan</a></li>
+                    <li class="btn"><a href="#section-classic">Classique</a></li>
+                    <li class="btn"><a href="#section-spicy">épicé</a></li>
+                    <li class="btn"><a href="#section-vegan">vegan</a></li>
                 </ul>
             </div> 
         </div>
