add surprise accueil

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <section class="accueil-container">
         <img src="ressources/accueilBg.jpeg" alt="Background picture">
+        <img id="accueil-racoon" src="ressources/shyRaccoon.png" alt="Racoon">
         <div class="accueil-title-container">
             <h1 class="main-title">L'Odyssey</h1>
             <h2 class="sub-title">Retrouver les saveurs geeks</h2>
