--- a/presentation.html
+++ b/presentation.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/presentation.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>l'Odyssey</title>
 </head>
 <body>
