--- a/presentation.html
+++ b/presentation.html
@@ -35,6 +35,14 @@
             </ul>
         </nav>
     </header>
+
+    <section id="galleryHead">
+        <div id="galleryHeader">
+            <div id="galleryBanner">
+                <img src="/ressources/restoBanner.jpg" alt="bannière">
+            </div>
+        </div>
+    </section>
     
             <div class="space"></div>
     
