adding an easter egg on avis page

--- a/avis.html
+++ b/avis.html
@@ -42,6 +42,9 @@
         <!-- Title -->
         <h1>Avis clients</h1>
 
+        <!-- Easter Egg -->
+        <img id="raccoon-egg" src="ressources/opinions-raccoon.png" alt="raccoon easter egg" />
+
         <section class="opinions-rated">
             
         </section>
