--- a/emploi.html
+++ b/emploi.html
@@ -36,7 +36,10 @@
     </header>
 
 <!-- Titre page emploi-->
+<div class="banner">
 <h2>Faites partie de l'équipe !</h2>
+</div>
+
     
 <!-- Présentation des valeurs de l'équipe-->
 <div class="flexbox1">
