implement scrolling effect on gallery, add h1 h2 h3 global styles

--- a/galerie.html
+++ b/galerie.html
@@ -42,7 +42,7 @@
             </div>
             <div id="nav-gallery">
                 <ul>
-                    <li class="btn"><a href="#section-classic">Classique</a></li>
+                    <li class="btn"><a href="#section-classic>">Classique</a></li>
                     <li class="btn"><a href="#section-spicy">épicé</a></li>
                     <li class="btn"><a href="#section-vegan">vegan</a></li>
                 </ul>
@@ -80,7 +80,7 @@
                 </div>
             </section>
 
- 
+
             <section id="section-vegan">                
                 <div class="course-container">
                     <div id="vegan-entree" class="gallery-picture">
