event page finish

--- a/event.html
+++ b/event.html
@@ -38,33 +38,46 @@
 
     <h1 class="event-h1">EVENEMENT</h1>
         <section class="event-container">
-            <div class="img-container">
-                <img class="theme" src="ressources/wedding.jpeg" alt="img du thème">
-                <p><strong>Mariage</strong></p>
+
+            <!-- <div class="tooltip">
+                <div class="img-container">
+                    <img class="theme" src="ressources/wedding.jpeg" alt="img du thème">
+                    <span class="tooltiptext">Une salle de 3000m2 est à votre disposition ainsi qu'un traiteur et des serveurs.</span>
+                </div>
+                    <p>Mariage</p>
+            </div>
+            <div class="tooltip">
+                <div class="img-container">
+                    <img class="theme" src="ressources/tango.jpeg" alt="img du thème">
+                    <span class="tooltiptext">Tous les jeudis, nous proposons des cours de danse.</span>
+                </div>
+                    <p>Dancing</p>
             </div>
             <div class="img-container">
-                <img class="theme" src="ressources/tango.jpeg" alt="img du thème">
-                <p><strong>Dancing</strong></p>
+                <div class="tooltip">
+                    <img class="theme" src="ressources/meeting.jpeg" alt="img du thème">
+                    <span class="tooltiptext">Nous disposons de bureau équipé ainsi qu'un trés haut débit internet.</span>
+                </div>
+                    <p>Réunion de travail</p>
             </div>
-            <div class="img-container">
-                <img class="theme" src="ressources/meeting.jpeg" alt="img du thème">
-                <p><strong>Réunion de travail</strong</p>
-            </div>
+        <div class="tooltip">
             <div class="img-container">
                 <img class="theme" src="ressources/cheers.jpeg" alt="img du thème">
-                <p><strong>concert</strong></p>
+                <span class="tooltiptext">Tous les 1er vendredi du mois, un artiste nous fait l'honneur de se produire chez nous.</span>
+            </div>
+                <p>Concert</p>
                 <br/> 
             </div>
-    </div>
-        <div class="event-div">
+            </div> -->
+    </section> 
+    <div class="event-div">
             <p>Nous organisons également des repas à thème comme Halloween et St-Valentin.</p>
-            <p class="style-event">N'hésitez pas à vous abonner à la newsletter pour ne rater aucun évenement <span class="span-event">&#x1F609;.</span></p>
+            <p class="style-event">N'hésitez pas à vous abonner à la <a href="#">newsletter</a> pour ne rater aucun évenement. <span class="span-event">&#x1F609;.</span></p>
             <br>
         </div>
-        </section>
 
     
-<footer>
+<footer class="footer-event">
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
     <script src="scripts/event.js"></script>
