--- a/galerie.html
+++ b/galerie.html
@@ -42,7 +42,7 @@
             </div>
             <div id="nav-gallery">
                 <ul>
-                    <li class="btn"><a href="#section-classic>">Classique</a></li>
+                    <li class="btn"><a href="#section-classic">Classique</a></li>
                     <li class="btn"><a href="#section-spicy">épicé</a></li>
                     <li class="btn"><a href="#section-vegan">vegan</a></li>
                 </ul>
