--- a/reservation.html
+++ b/reservation.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="reservation-input-element">
-                    <label for="reservation-time">Créaneau : </label>
+                    <label for="reservation-time">Créneau : </label>
                     <select name="reservation-time" id="reservation-time">
                         <option value="11h30">11h30</option>
                         <option value="12h">12h</option>
