--- a/event.html
+++ b/event.html
@@ -36,7 +36,7 @@
     </header>
     <div class="event-body">
 
-    <h1 class="event-h1">EVENEMENT</h1>
+    <h1 class="event-h1">Evenements</h1>
         <section class="event-container">
 
             <!-- <div class="tooltip">
