modif last minute responsiv modal et adress

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
                 <div class="adress-item">
                     <img src="ressources/instagram.png" alt="Instragram Icon">
-                    <a href="https://www.instagram.com/wildlaloupe/" target="_blank">Instragram</a>
+                    <a href="https://www.instagram.com/wildlaloupe/" target="_blank">Instagram</a>
                 </div>
 
             </div>
