--- a/event.html
+++ b/event.html
@@ -18,7 +18,7 @@
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
                 <li class="item"><a href="reservation.html">Reservations</a></li>
-                <li class="item"><a href="presentation.html">Presentation</a></li>
+                <li class="item desktop"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
@@ -27,6 +27,7 @@
                 <div class="burger-line3"></div>
             </div>
             <ul class="nav-burger-item">
+                <li class="item mobile"><a href="présentation.html">Présentation</a></li>
                 <li class="item"><a href="galerie.html">Galerie</a></li>
                 <li class="item"><a class="nav-active-color" href="event.html">Evenements</a></li>
                 <li class="item"><a href="avis.html">Livre d'or</a></li>
