--- a/emploi.html
+++ b/emploi.html
@@ -50,8 +50,8 @@
     <div class="valeurs">
         <h3>Nos valeurs</h3>
         <p>A l'Odyssey, nous souhaitons travailler avec des personalités différentes, unies autour des mêmes valeurs : bienveillance, entraide, communication.
-            Nous avons avant tout le soucis de proposer des produits et un service de qualité à l'ensemble des membres de la Wild Code School, nombreux à nos côté quotidiennement.
-            Que votre domaine de compétence se tourne plutôt vers le front-end ou le back-end, nous mettons avant tout l'accent sur le côté humain de nos équipes, et sommes à la recherche de membres qui offreront la meilleure expérience possible à nos clients.</p>
+            Nous avons avant tout le souci de proposer des produits et un service de qualité à l'ensemble des membres de la Wild Code School, nombreux à nos côté quotidiennement.
+            Que votre domaine de compétence se tourne plutôt vers le front-end ou le back-end, nous mettons avant tout l'accent sur le côté humain de nos équipes, et sommes à la recherche de membres qui offriront la meilleure expérience possible à nos clients.</p>
     </div>
     <div class="valeurs">
         <img src="ressources/emploi2.jpeg" class="table-img">
