--- a/presentation.html
+++ b/presentation.html
@@ -106,7 +106,7 @@
 
             <div class="space"></div>
 
-<footer>
+<footer id="foot">
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
 
